manage_Cam_bg_updated

--- a/templates/manage_cam.html
+++ b/templates/manage_cam.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <div class="imgBx">
-            <img src="/static/manage_cam_bg.jpg">
+            <img src="/static/manage_Cam_bg.png">
         </div>
         <div class="contentBx">
                 <div class="formBx">
