--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,16 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   
-  <!--link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"-->
+  <link href="/static/style1.css" rel="stylesheet">
+  <link href="/static/style2.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/static/index.css" rel="stylesheet">
+  <link href="/static/style.css" rel="stylesheet">
 
 </head>
 
@@ -36,12 +28,11 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">IndustryXpert</a></h1>
+      <h1 class="logo me-auto"><a href="">IndustryXpert</a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Features</a></li>
           <li><a class="getstarted scrollto" href="#about">Login</a></li>
         </ul>
@@ -58,7 +49,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Revolutionizing Industrial Safety</h1>
-          <h2>with a cutting-edge solution to establish a safer and secure industrial environment.</h2>
+          <h2>with a cutting-edge solution to establish a safer and secure industrial environment.<br><br><br></h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#formpart" class="btn-get-started scrollto">Raise Complain</a>
           </div>
@@ -196,17 +187,9 @@
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <!--script src="/static/vendor/aos/aos.js"></script>
-  <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/static/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/static/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/static/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/static/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="/static/vendor/php-email-form/validate.js"></script -->
 
   <!-- Template Main JS File -->
-  <script src="/static/index.js"></script>
+  <script src="/static/main.js"></script>
 
 </body>
 
