complain db created

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -31,9 +31,15 @@
                     </a>
                 </li>                
                 <li class="sidebar-item">
-                    <a href="/notification" class="sidebar-link">
+                    <a href="/notifications" class="sidebar-link">
                         <i class="lni lni-popup"></i>
                         <span>Notification</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="/complaints" class="sidebar-link">
+                        <i class="lni lni-envelope"></i>
+                        <span>Complaints</span>
                     </a>
                 </li>
             </ul>
