--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,11 @@
 
   <!-- Vendor CSS Files -->
   
-  <link href="/static/style1.css" rel="stylesheet">
-  <link href="/static/style2.css" rel="stylesheet">
+  <link href="/static/css/style1.css" rel="stylesheet">
+  <link href="/static/css/style2.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/static/style.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="/static/index_bg.png" class="img-fluid animated" alt="">
+          <img src="/static/img/index_bg.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
 
 
   <!-- Template Main JS File -->
-  <script src="/static/main.js"></script>
+  <script src="/static/js/main.js"></script>
 
 </body>
 
