--- a/templates/manage_cam.html
+++ b/templates/manage_cam.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Cameras</title>
-    <link rel="stylesheet" href="/static/manage_cam.css">
+    <link rel="stylesheet" href="/static/css/manage_cam.css">
    
 </head>
 <body>
     <section>
         <div class="imgBx">
-            <img src="/static/manage_Cam_bg.png">
+            <img src="/static/img/manage_Cam_bg.png">
         </div>
         <div class="contentBx">
                 <div class="formBx">
