--- a/templates/dash.html
+++ b/templates/dash.html
@@ -5,53 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cam Dashboard</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style_dash.css">
+    <title>Cam Dashboard</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <aside id="sidebar">
-            <div class="d-flex">
-                <button class="toggle-btn" type="button">
-                    <i class="lni lni-grid-alt"></i>
-                </button>
-                <div class="sidebar-logo">
-                    <a href="#">Dashboard</a>
-                </div>
-            </div>
-            <ul class="sidebar-nav">
-                <li class="sidebar-item">
-                    <a href="/manage_camera" class="sidebar-link">
-                        <i class="lni lni-camera"></i>
-                        <span>Manage Camera</span>
-                    </a>
-                </li>                
-                <li class="sidebar-item">
-                    <a href="/notifications" class="sidebar-link">
-                        <i class="lni lni-popup"></i>
-                        <span>Notification</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="/complaints" class="sidebar-link">
-                        <i class="lni lni-envelope"></i>
-                        <span>Complaints</span>
-                    </a>
-                </li>
-            </ul>
-            <div class="sidebar-footer">
-                <li class="sidebar-item">
-                    <a href="/logout" class="sidebar-link">
-                        <i class="lni lni-exit"></i>
-                        <span>Logout</span>
-                    </a>
-                </li>
-            </div>
-        </aside>
+        {% include 'sidebar.html' %}
         <div class="main p-3">
             <div class="text-center">
                 <div id="live-feeds">
