--- a/templates/manage_cam.html
+++ b/templates/manage_cam.html
@@ -1,58 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/style_dash.css">
+    
     <title>Manage Cameras</title>
     <link rel="stylesheet" href="/static/css/manage_cam.css">
-   
+
 </head>
+
 <body>
-    <section>
-        <div class="imgBx">
-            <img src="/static/img/manage_Cam_bg.png">
-        </div>
-        <div class="contentBx">
-                <div class="formBx">
-                    <h2>Camera Details</h2>
-                    <form action="/get_cam_details" method="POST">
-                        <div class="inputBx">
-                            <span>Camera ID</span>
-                            <input type="text" name="Cam_id">
-                        </div>
-                      
-                        <!--div class="form-check">
-                            <input class="form-check-input" type="radio" name="add_cam">
-                            <label class="form-check-label" for="add_cam">
-                              Add Camera
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="radio" name="remove_cam">
-                            <label class="form-check-label" for="remove_cam">
-                              Remove Camera
-                            </label>
-                          </div -->
-                        <br>
-                        <br>
-                        <div class="remember">
-                            <label><input type="checkbox" name="fire">Fire</label>
-                        </div>
-                        <div class="remember">
-                            <label><input type="checkbox" name="pose_alert" >Pose Alert</label>
-                        </div>
-                        <div class="remember">
-                            <label><input type="checkbox" name="R_zone">Restricted Zone</label>
-                        </div>
-                        <div class="remember">
-                            <label><input type="checkbox" name="Safety_gear">Safety gear</label>
-                        </div>
-                        <div class="inputBx">
-                            <input type="submit" value="Submit" name="">
-                        </div>
-                    </form>
-                </div> 
-        </div>
-    </section>
+    <div class="wrapper">
+        {% include 'sidebar.html' %}
+        <section>
+            <div class="imgBx">
+                <img src="/static/img/manage_Cam_bg.png">
+            </div>
+            <div class="contentBx">
+                    <div class="formBx">
+                        <h2>Camera Details</h2>
+                        <form action="/get_cam_details" method="POST">
+                            <div class="inputBx">
+                                <span>Camera ID</span>
+                                <input type="text" name="Cam_id">
+                            </div>
+                          
+                            <!--div class="form-check">
+                                <input class="form-check-input" type="radio" name="add_cam">
+                                <label class="form-check-label" for="add_cam">
+                                  Add Camera
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="remove_cam">
+                                <label class="form-check-label" for="remove_cam">
+                                  Remove Camera
+                                </label>
+                              </div -->
+                            <br>
+                            <br>
+                            <div class="remember">
+                                <label><input type="checkbox" name="fire">Fire</label>
+                            </div>
+                            <div class="remember">
+                                <label><input type="checkbox" name="pose_alert" >Pose Alert</label>
+                            </div>
+                            <div class="remember">
+                                <label><input type="checkbox" name="R_zone">Restricted Zone</label>
+                            </div>
+                            <div class="remember">
+                                <label><input type="checkbox" name="Safety_gear">Safety gear</label>
+                            </div>
+                            <div class="inputBx">
+                                <input type="submit" value="Submit" name="">
+                            </div>
+                        </form>
+                    </div> 
+            </div>
+        </section>
+    </div>
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="static/js/script_dash.js"></script>
 </body>
+
 </html>
