--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/notifications.css" rel="stylesheet">
+
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/style_dash.css">
+
     <title>Notifications</title>
 </head>
+
 <body>
-    <h1>Notifications</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Date Time</th>
-                <th>Alert Type</th>
-                <th>Frame Snapshot</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for alert in alerts %}
-                <tr>
-                    <td>{{ alert.date_time }}</td>
-                    <td>{{ alert.alert_type }}</td>
-                    <td><img src="data:image/jpeg;base64,{{ alert.frame_snapshot }}" alt="Frame Snapshot" width="200"></td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <div class="wrapper">
+        {% include 'sidebar.html' %}
+        <div class="container">
+            <div class="row">
+              <div class="col-12">
+                <table class="table table-image">
+                  <thead>
+                    <tr>
+                      <th scope="col">Slno</th>
+                      <th scope="col">Snapshot</th>
+                      <th scope="col">Alert Type</th>
+                      <th scope="col">Date</th>
+                      <th scope="col">Time</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for alert in alerts %}
+                    <tr>
+                      <th scope="row">{{ loop.index }}</th>
+                      <td class="w-25">
+                        <img src="data:image/jpeg;base64,{{ alert.frame_snapshot }}" class="img-fluid img-thumbnail" alt="Snapshot">
+                      </td>
+                      <td>{{ alert.alert_type }}</td>
+                      <td>{{ alert.date_time.strftime('%Y-%m-%d') }}</td>
+                      <td>{{ alert.date_time.strftime('%H:%M:%S') }}</td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+    </div>
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="static/js/script_dash.js"></script>
 </body>
+
 </html>
