--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/notifications.css" rel="stylesheet">
+    <link href="/static/css/notifications_complain.css" rel="stylesheet">
 
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,6 +20,7 @@
     <div class="wrapper">
         {% include 'sidebar.html' %}
         <div class="container">
+          <h1>Notification</h1>
             <div class="row">
               <div class="col-12">
                 <table class="table table-image">
