--- a/static/css/style.css
+++ b/static/css/style.css
@@ -452,7 +452,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 80vh;
+  height:110%;          /*  80vh; */
   background: #37517e;
 }
 
