notifications modified and favicon generated

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,8 @@
   <!-- Template Main CSS File -->
   <link href="/static/css/style.css" rel="stylesheet">
 
+  <link rel="icon" href="/static/img/favicon.png">
+
 </head>
 
 <body>
