--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/notifications_complain.css" rel="stylesheet">
+
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style_dash.css">
-
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/notifications_complain.css" rel="stylesheet">
     <title>Complaints</title>
 </head>
 
@@ -20,30 +20,29 @@
         {% include 'sidebar.html' %}
         <!--Add your code here-->
             <div class="container">
-                <h2>All Complaints</h2>
+                <h1>All Complaints</h1>
 
 
                 {% if complaints|length==0 %}
-
                 <div class="alert alert-dark" role="alert">
                         No complaints are there Chill Karo!
                 </div>
-       
                 {% else %}
-
-                <table class="table table-image">
-                    <thead>
-                        <tr>
-                            <th scope="col">Sno.</th>
-                            <th scope="col">Full Name</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Alert Type</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">File</th>
-                            <th scope="col">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                <div class="row">
+                    <div class="col-12">
+                        <table class="table table-image">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Sno.</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">Alert Type</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">File</th>
+                                    <th scope="col">Actions</th>
+                                </tr>
+                            </thead>
+                        <tbody>
                         {% for complaint in complaints %}
                         <tr>
                             <th scope="row">{{loop.index}}</th>
@@ -66,8 +65,10 @@
                         {% endfor %}
                         {% endif %}
                     </tbody>
-                </table>
+                    </table>
+                </div>
             </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
