camera moved to db from dictionary

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -18,9 +18,9 @@
         <div class="main p-3">
             <div class="text-center">
                 <div id="live-feeds">
-                    {% for cam_id, camera in cameras.items() %}
-                        <h2>Camera {{ cam_id }}</h2>
-                        <iframe src="/video_feed/{{ cam_id }}" width="1000" height="500"></iframe>
+                    {% for camera in cameras %}
+                        <h2>Camera:{{ camera.cam_id }}</h2>
+                        <iframe src="/video_feed/{{ camera.cam_id }}" width="1000" height="500"></iframe>
                     {% endfor %}
                 </div>
             </div>
