--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -25,7 +25,7 @@
 
                 {% if complaints|length==0 %}
                 <div class="alert alert-dark" role="alert">
-                        No complaints are there Chill Karo!
+                        No complaints Found!!
                 </div>
                 {% else %}
                 <div class="row">
