--- a/templates/manage_cam.html
+++ b/templates/manage_cam.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style_dash.css">
-    
+
     <title>Manage Cameras</title>
     <link rel="stylesheet" href="/static/css/manage_cam.css">
 
@@ -23,36 +23,61 @@
                 <img src="/static/img/manage_Cam_bg.png">
             </div>
             <div class="contentBx">
-                    <div class="formBx">
-                        <h2>Camera Details</h2>
-                        <form action="/get_cam_details" method="POST">
-                            <div class="inputBx">
-                                <span>Camera ID</span>
-                                <input type="text" name="Cam_id">
-                            </div>
-                            <br>
-                            <br>
-                            <div class="remember">
-                                <label><input type="checkbox" name="fire">Fire</label>
-                            </div>
-                            <div class="remember">
-                                <label><input type="checkbox" name="pose_alert" >Pose Alert</label>
-                            </div>
-                            <div class="remember">
-                                <label><input type="checkbox" name="R_zone">Restricted Zone</label>
-                            </div>
-                            <div class="remember">
-                                <label><input type="checkbox" name="Safety_gear">Safety gear</label>
-                            </div>
-                            <div class="inputBx">
-                                <input type="submit" value="Submit" name="">
-                            </div>
-                        </form>
-                    </div> 
+                <div class="formBx">
+                    <h2>Camera Details</h2>
+                    <form action="/get_cam_details" method="POST">
+                        <div class="inputBx">
+                            <span>Camera ID</span>
+                            <input type="text" name="Cam_id">
+                        </div>
+                        <br>
+                        <br>
+                        <div class="remember">
+                            <label><input type="checkbox" name="fire">Fire</label>
+                        </div>
+                        <div class="remember">
+                            <label><input type="checkbox" name="pose_alert">Pose Alert</label>
+                        </div>
+                        <div class="remember">
+                            <label><input type="checkbox" name="R_zone">Restricted Zone</label>
+                        </div>
+                        <div class="remember">
+                            <label><input type="checkbox" name="Safety_gear">Safety gear</label>
+                        </div>
+                        <div class="inputBx">
+                            <input type="submit" value="Submit" name="">
+                        </div>
+                    </form>
+                </div>
+                <div class="present-cams">
+                    <h2>Present Cameras</h2>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Camera ID</th>
+                                <th>Fire Detection</th>
+                                <th>Pose Alert</th>
+                                <th>Restricted Zone</th>
+                                <th>Safety Gear Detection</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for camera in cameras %}
+                            <tr>
+                                <td>{{ camera.cam_id }}</td>
+                                <td>{{ "Yes" if camera.fire_detection else "No" }}</td>
+                                <td>{{ "Yes" if camera.pose_alert else "No" }}</td>
+                                <td>{{ "Yes" if camera.restricted_zone else "No" }}</td>
+                                <td>{{ "Yes" if camera.safety_gear_detection else "No" }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </section>
     </div>
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
