--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -25,7 +25,7 @@
           {% if alerts|length==0 %}
 
           <div class="alert alert-dark" role="alert">
-                  No Alerts are there Chill Karo!
+                  No Alerts Found!!
           </div>
  
           {% else %}
