--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
           <h1>Revolutionizing Industrial Safety</h1>
           <h2>with a cutting-edge solution to establish a safer and secure industrial environment.<br><br><br></h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#upload" class="btn-get-started scrollto">Ampilify Motion</a>
+            <a href="/upload" class="btn-get-started scrollto">Ampilify Motion</a>
           </div>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#formpart" class="btn-get-started scrollto">Raise Complain</a>
@@ -71,10 +71,6 @@
   </section><!-- End Hero -->
 
   <main id="main">
-
-    <!--Form Part started -->
-    
-
 
       <!--Form Part started -->
       <section id="formpart" class="formpart">
