--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#services">Features</a></li>
-          <li><a class="getstarted scrollto" href="/login">Login</a></li>
+          <li><a class="getstarted scrollto" href="/login_page">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
