--- a/templates/complain_form.html
+++ b/templates/complain_form.html
@@ -1,3 +1,7 @@
+<form action="/{{id}}/submit_complaint" method="post" enctype="multipart/form-data">
+
+
+  
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,16 +13,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Complain Form</title>
-
+    <link rel="stylesheet" href="/static/css/complain.css">
 </head>
 
 <body>
-    <h1>{{username}}</h1>
-    <section id="formpart" class="formpart">
+    <!-- <h1>{{username}}</h1> -->
+   <section id="formpart" class="formpart">
         <div class="container mt-5">
-          <h1 class="text-center mb-4">Raise Your Complain</h1>
+          <h2 class="text-center mb-4">Raise Your Complain</h2>
           <div class="row justify-content-center">
             <div class="col-md-6">
+              
               <form action="/{{id}}/submit_complaint" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                   <label for="fullName">Full Name</label>
@@ -35,7 +40,7 @@
                   <select class="form-control" id="alertType" name="alertType">
                     <option value="Report an Alert">Report an Alert</option>
                     <option value="Normal Complaint">Normal Complaint</option>
-                    <option value="Harassment reporting">Harassment reporting</option>
+                    <option value="Harassment reporting">Alert reporting</option>
                   </select>
                 </div>
                 <div class="form-group">
@@ -52,9 +57,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> 
 
-
+ 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
