landing page update

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#services">Features</a></li>
+          <li><a class="nav-link scrollto" href="#Features">Features</a></li>
           <li><a class="getstarted scrollto" href="/login_page">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -53,10 +53,18 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
-          <h1>Revolutionizing Industrial Safety</h1>
-          <h2>with a cutting-edge solution to establish a safer and secure industrial environment.<br><br><br></h2>
-          <div class="d-flex justify-content-center justify-content-lg-start">
+          <h1>IndustryXpert</h1>
+          <h2>Enhancing Safety and Efficiency in Industrial Environments.</h2>
+          <p style="color:whitesmoke;">We are committed to transforming safety protocols and optimizing efficiency in
+            industrial settings. Our
+            innovative web-based application utilizes cutting-edge
+            technology to not only ensure a safer work environment but also enhance equipment performance and
+            reliability.</p>
+          <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="/upload" class="btn-get-started scrollto">Ampilify Motion</a>
+          </div-->
+          <div class="d-flex justify-content-center justify-content-lg-start">
+            <a href="#about" class="btn-get-started scrollto">Know More</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -69,7 +77,66 @@
 
   <main id="main">
 
-    
+
+    <!-- ======= Services Section ======= -->
+    <section id="Features" class="services section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Key Features</h2>
+          <p>Industrial workplaces pose risks to both machinery and personnel. Our project aims to mitigate these risks
+            by providing a platform that helps to establish a safer and more secure industrial
+            environment.</p><br>
+
+          <div class="row">
+            <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                <h4><a href="">Motion Amplification</a></h4>
+                <p>Experience the power of motion amplification during equipment inspections. Our tool processes videos
+                  of working machines, unveiling subtle movements for enhanced maintenance insights.</p>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+              data-aos-delay="200">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-file"></i></div>
+                <h4><a href="">Emergency Alert</a></h4>
+                <p>Stay prepared for emergencies with our alert system. In critical situations, individuals can easily
+                  signal for help by waving to the nearest camera, triggering an immediate alert.</p>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
+              data-aos-delay="300">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-tachometer"></i></div>
+                <h4><a href=""> Restricted Zone</a></h4>
+                <p>Keep restricted areas secure with live CCTV feeds. Our system detects unauthorized access and raises
+                  alerts, ensuring compliance with safety protocols.</p>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
+              data-aos-delay="400">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-layer"></i></div>
+                <h4><a href="">Safety gear Detection</a></h4>
+                <p>Prioritize a safe working environment with our safety gear detection feature. By identifying safety
+                  equipment and fire hazards in real-time, we ensure optimal safety conditions for all.</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
+
+    <!--  Motion Section -->
+
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
@@ -79,25 +146,34 @@
 
         <div class="row content">
           <div class="col-lg-6">
+            <h3>Our Mission</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              Our mission is clear: to redefine safety in industrial environments through
+              innovation, empowerment, and a relentless commitment to people. We see safety not as a checkbox, but as an
+              art form, meticulously crafted with the latest technologies and creative thinking. Our platform empowers
+              organizations to take control of their safety destiny, fostering a culture where every individual feels
+              valued and protected. By building bridges between technology and humanity, innovation and tradition, we're
+              not just preventing accidents; we're shaping a safer, smarter future for all.
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
+            <h3>Why choose Us?</h3>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              Why settle for the ordinary when you can have the extraordinary? Here's why IndustryXpert is the ultimate
+              choice for revolutionizing safety and efficiency in your industrial environment:
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <ul>
+              <li><i class="ri-check-double-line"></i><strong>Innovation at its Finest:</strong> We're not just another
+                safety app;
+                we're pioneers of progress. With our relentless pursuit of innovation, we're constantly pushing the
+                boundaries of what's possible in industrial safety. When you choose us you're choosing to
+                stay ahead of the curve.</li>
+              <li><i class="ri-check-double-line"></i> <strong>Simplified Safety:</strong> Say goodbye to complex safety
+                protocols and
+                hello to simplicity. Our platform is designed with user-friendliness in mind, ensuring that everyone
+                from the tech-savvy to the tech-shy can navigate it with ease. Safety has never been this simple</li>
+            </ul>
+            <a href="#Features" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
@@ -105,61 +181,7 @@
     </section>
 
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg">
-      <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Key Features</h2>
-          <p>Industrial workspace possesses risk to machinery and people. Our project aims to
-            reduce these risks by developing a web based application that leverages a cutting
-            edge solution to help establish a safer and secure industrial environment</p>
-        </div>
-
-        <div class="row">
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Motion Amplification</a></h4>
-              <p>During equipment inspection, a video of the working
-                machine can be processed by this tool.</p>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-            data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Emergency Alert</a></h4>
-              <p>In case of an emergency, the person in the scene can reach
-                the nearest camera and wave to raise an alert.</p>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-            data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href=""> Restricted Zone</a></h4>
-              <p>Using the live feeds from CCTV cameras we can
-                raise alert if someone is found in restricted zone.</p>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-            data-aos-delay="400">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4><a href="">Safety gear Detection</a></h4>
-              <p>It is very important to have a safe working
-                condition, and Safety Gear is most important for that</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
 
 
 
