--- a/static/css/complain.css
+++ b/static/css/complain.css
@@ -1,8 +1,18 @@
 
 /* form decoration and style */
+
+
 body
 {
-    background-image: url(/static/img/complain1.jpg);
+    background-image: linear-gradient(rgba(124, 119, 119, 0.7),#e9ebf4),url(/static/img/complain1.jpg);
+    background-size: cover;
+    background-position: center;
+    opacity: 1.5;
+    width: 100%;
+    height:100vh;
+   
+    align-items: center;
+    justify-content: center;
 }
 .form-control {
   border-radius: 20px !important;
@@ -15,10 +25,15 @@ body
 
 .form-group label {
   color: #062a3b; /* Form label color */
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bolder;
   margin-bottom: 10px;
   margin-top: 10px;
+ 
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  font-style: normal;
+ 
 }
 .form-control {
   border-color: #ced4da; /* Form input border color */
@@ -36,6 +51,7 @@ body
   margin-right: 6px;
   cursor: pointer;
   border-radius: 16px;
+  
 
 }
 
@@ -44,11 +60,18 @@ body
   /* Other existing styles */
   text-align: center;
   font-size: 2.3rem;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
   font-weight: bolder;
   text-transform: uppercase;
-    color: rgb(16, 85, 94);  /*#607d8b;*/
-    letter-spacing: 1px;
+  color:#19325d;  /*#607d8b;*/
+  letter-spacing: 1px;
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  font-style: normal;
+
+
+
+
 }
 
 
@@ -57,14 +80,17 @@ body
 background-color: #37517e; /* Button color */
 border: none; /* Remove button border */
 padding: 10px 20px; /* Add padding to the button */
-font-weight: bolder;
+font-weight: 500;
 width: 100%;
 color: #fff; /* Text color */
+outline: none;
+cursor: pointer;
+border-radius: 20px;
 
 }
 
 .btn:hover {
-background-color: rgb(227, 255, 255); /* Darker color on hover */
+background-color: #7186ac; /* Darker color on hover */
 color: #000; /* Text color on hover */
 }
 
